Fixed some bugs

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
 </style>
 </head>
 <body bgColor="#FF00FF">
+
+    
 <div id="image1" style="position:absolute; overflow:hidden; left:1309px; top:523px; width:261px; height:297px; z-index:0;"><img src="https://c.tenor.com/YKSM9gsgPycAAAAi/thanos-dancing-twerking.gif" alt="" title="" border=0 width=261 height=297></div>
 
 <div id="image2" style="position:absolute; overflow:hidden; left:213px; top:542px; width:229px; height:252px; z-index:1"><img src="https://c.tenor.com/94EqbnFW_4QAAAAi/cj-dançando-dancing.gif" alt="" title="" border=0 width=229 height=252></div>
@@ -22,12 +24,14 @@
 <div id="image3" style="position:absolute; overflow:hidden; left:513px; top:633px; width:776px; height:102px; z-index:2"><img src="https://i.hizliresim.com/im4nse6.gif" alt="" title="" border=0 width=776 height=102></div>
 
 <div id="html1" style="position:absolute; overflow:hidden; left:610px; top:141px; width:626px; height:391px; z-index:3">
-    <iframe src="https://www.youtube.com/embed/zecnwqXe850?rel=0&modestbranding=1&mute=1&autohide=1&showinfo=0&controls=0&autoplay=1&loop=1"  width="560" height="315"  frameborder="0" allowfullscreen></iframe></div>
+    <iframe src="https://www.youtube.com/embed/zecnwqXe850?rel=0&modestbranding=1&autohide=1&showinfo=0&controls=0&loop=1"  width="560" height="315"  frameborder="0" allowfullscreen></iframe>
+</div>
 
 <script>
     setInterval(function() {
         document.body.style.backgroundColor = '#' + Math.floor(Math.random() * 16777215).toString(16);
     }, 1000)
+    
 </script>
 
 </body>
