--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,55 @@
 <div id="image3" style="position:absolute; overflow:hidden; left:513px; top:633px; width:776px; height:102px; z-index:2"><img src="https://i.hizliresim.com/im4nse6.gif" alt="" title="" border=0 width=776 height=102></div>
 
 <div id="html1" style="position:absolute; overflow:hidden; left:610px; top:141px; width:626px; height:391px; z-index:3">
-    <iframe src="https://www.youtube.com/embed/zecnwqXe850?rel=0&modestbranding=1&autohide=1&showinfo=0&controls=0&loop=1"  width="560" height="315"  frameborder="0" allowfullscreen></iframe>
+    <div id="player"></div>
 </div>
+
+<script>
+      // 2. This code loads the IFrame Player API code asynchronously.
+      var tag = document.createElement('script');
+
+      tag.src = "https://www.youtube.com/iframe_api";
+      var firstScriptTag = document.getElementsByTagName('script')[0];
+      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+      // 3. This function creates an <iframe> (and YouTube player)
+      //    after the API code downloads.
+      var player;
+      function onYouTubeIframeAPIReady() {
+        player = new YT.Player('player', {
+          height: '390',
+          width: '640',
+          videoId: 'zecnwqXe850',
+          playerVars: {
+            'playsinline': 1
+          },
+          events: {
+            'onReady': onPlayerReady,
+            'onStateChange': onPlayerStateChange
+          }
+        });
+      }
+
+      // 4. The API will call this function when the video player is ready.
+      function onPlayerReady(event) {
+        event.target.playVideo();
+      }
+
+      // 5. The API calls this function when the player's state changes.
+      //    The function indicates that when playing a video (state=1),
+      //    the player should play for six seconds and then stop.
+      var done = false;
+      function onPlayerStateChange(event) {
+        if (event.data == YT.PlayerState.PLAYING && !done) {
+          setTimeout(stopVideo, 6000);
+          done = true;
+        }
+      }
+      function stopVideo() {
+        player.stopVideo();
+      }
+    </script>
+
 
 <script>
     setInterval(function() {
