Added a autoplay work around

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,9 @@
           width: '640',
           videoId: 'zecnwqXe850',
           playerVars: {
-            'playsinline': 1
+            'playsinline': 1,
+            'controls': 0,
+            'loop': 1
           },
           events: {
             'onReady': onPlayerReady,
